# exercise-pose-trainers

exercise-pose-trainer-cnn-angles-multimodel/: full_body_model.h5  high_plank_multimodel_model.pkl  legs_model.h5  pyproject.toml
exercise-pose-trainer-cnn-angles-multimodel/exercise_pose_trainer/: extract_features.py  model.py  rename_files.py  test.py  train.py
exercise-pose-trainer-cnn-points-multimodel/: arms_model.h5  full_body_model.h5  high_plank_multimodel_model.pkl  legs_model.h5  pyproject.toml  requirements.txt
exercise-pose-trainer-fcnn-angles-multimodel/: arms_model.h5  arms_model_info.json  full_body_model.h5  high_plank_multimodel_model.pkl  legs_model.h5  legs_model_info.json  pyproject.toml
exercise-pose-trainer-fcnn-angles-multimodel/exercise_pose_trainer/: extract_features.py  model.py  pkl_to_h5.py  test.py  train.py  utils.py
exercise-pose-trainer-fcnn-angles-multimodel2/: arms_model.h5  high_plank_multimodel_model.pkl
exercise-pose-trainer-fcnn-points-multimodel/: arms_model.h5  full_body_model.h5  high_plank_multimodel_model.pkl  legs_model.h5
exercise-pose-trainer-knn-angles/: high_plank_model.pkl  high_plank_multiclass_model.pkl  pyproject.toml
exercise-pose-trainer-knn-angles-multimodel/: arms_model.json  full_body_model.json  high_plank_multimodel_model.pkl  legs_model.json  pyproject.toml
exercise-pose-trainer-knn-angles-multimodel/exercise_pose_trainer/: model.py  pkl_to_json.py  rename_files.py  test.py  train.py
exercise-pose-trainer-logistic-regression-angles-multimodel/: arms_model.json  full_body_model.json  high_plank_multimodel_model.pkl  legs_model.json
exercise-pose-trainer-nn-merged-multimodel/: arms_model.h5  full_body_model.h5  high_plank_multimodel_model.pkl  legs_model.h5
exercise-pose-trainer-random-forest-angles-multimodel/: arms_model.json  full_body_model.json  high_plank_multimodel_model.pkl  legs_model.json
exercise-pose-trainer-svm-angles-multimodel/: arms_model.json  full_body_model.json  high_plank_multimodel_model.pkl  legs_model.json
high_plank_multimodel/: labels.json
(+35 files in other folders)
