[tool.poetry]
name = "exercise-pose-trainer"
version = "0.1.0"
description = ""
authors = ["rafael.santos <rafaelsantos32141@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
train = "exercise_pose_trainer.train:main"
rename_files = "exercise_pose_trainer.rename_files:main"
test = "exercise_pose_trainer.test:main"
report = "exercise_pose_trainer.model:main"
pkl_to_h5 = "exercise_pose_trainer.pkl_to_h5:main"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
